--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,22 +28,13 @@ body.pianist::before {
   background-image: url('../img/bg.jpg');
 }
 
-/* Background for designer */
 body.designer::before {
   background-image: url('../img/background-light.png');
 }
 
-/* Media query for smaller screens, adjust breakpoint as needed */
-@media (max-width: 1023px) {
-    body.pianist::before {
-        background-position: top right; 
-    }
-}
-
-/* Ensuring background is fixed only on wider screens */
-@media (min-width: 1024px) {
-    body::before {
-        background-attachment: fixed;
+@media (max-width: 500px) {
+    body:before {
+        background-position: 83% 30%;
     }
 }
 
@@ -1485,5 +1476,5 @@ body.designer .contact .info-box .social-links a {
     to {
         opacity: 1;
     }
-}
-*/
+}*/
+
